fix: projects visibility improved

--- a/style.css
+++ b/style.css
@@ -225,8 +225,8 @@ section {
 .btn {
   font-weight: 600;
   transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
+  padding: 25px;
+  width: rem;
   border-radius: 2rem;
 }
 
@@ -240,10 +240,17 @@ section {
   cursor: pointer;
 }
 
-.btn-color-1,
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
   color: white;
+}
+
+.btn-color-1 {
+  background: rgb(53, 53, 53);
+  transition: all 300ms ease;
+  font-size: 17px;
+  color: white;
+  font-weight: 800;
 }
 
 .btn-color-1:hover {
@@ -252,6 +259,7 @@ section {
 
 .btn-color-2 {
   background: none;
+  font-size: 15px;
 }
 
 .btn-color-2:hover {
@@ -485,7 +493,7 @@ footer p {
   flex: 0 0 auto;
   padding: 1.5rem;
   width: 300px;
-  height: 550px;
+  height: 560px;
   background: rgb(250, 250, 250);
   border-radius: 2rem;
   border: rgb(163, 163, 163) 0.01rem solid;
